--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,1 @@
-config:
-  info: master branch,springcloud-config/config-dev.yml version=5
+config:info: master branch,springcloud-config/config-dev.yml version=5
